# ferroalloc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
analyzer/: Cargo.toml  README.md
analyzer/src/: aggregator.rs  api.rs  diff.rs  dwarf.rs  leak_report.rs  main.rs
probe/: Cargo.toml  README.md
probe/examples/: basic.rs
probe/src/: lib.rs
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: analyzerClient.ts  codelens.ts  extension.ts  heatmap.ts  statusBar.ts
