[package]
name = "ferroalloc-analyzer"
version = "0.1.0"
edition = "2021"
description = "DWARF symbol resolver and allocation aggregator for ferroalloc"

[[bin]]
name = "ferroalloc-analyzer"
path = "src/main.rs"

[dependencies]
addr2line = "0.24"
anyhow = "1"
gimli = "0.31"
object = "0.36"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
