[package]
name = "ferroalloc-analyzer"
version = "0.1.0"
edition = "2021"
description = "Allocation aggregator and HTTP API server for the ferroalloc VS Code extension"
license = "MIT"
repository = "https://github.com/hichammh/ferroalloc"
homepage = "https://marketplace.visualstudio.com/items?itemName=hichammh.ferroalloc"
documentation = "https://github.com/hichammh/ferroalloc"
keywords = ["memory", "allocator", "profiling", "heap", "debugging"]
categories = ["development-tools::profiling", "memory-management"]
readme = "README.md"

[[bin]]
name = "ferroalloc-analyzer"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
