[package]
name = "ferroalloc-probe"
version = "0.1.0"
edition = "2021"
description = "Memory allocation probe for the ferroalloc VS Code extension"

[lib]
name = "ferroalloc_probe"
crate-type = ["rlib"]

[dependencies]
crossbeam-queue = "0.3"
backtrace = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
debug = true
